cluster/apps/monitoring/prometheus/speedtest.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speedtest
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: speedtest
  template:
    metadata:
      labels:
        k8s-app: speedtest
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9469"
        seccomp.security.alpha.kubernetes.io/pod: 'docker/default'
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                - key: kubernetes.io/os
                  operator: In
                  values:
                  - linux
      securityContext:
        runAsNonRoot: true
        runAsUser: 65535
      hostPID: true
      hostNetwork: true
      containers:
        - name: speedtest
          image: szpaczyn/prometheus-speedtest-exporter:v1.1.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9469
              protocol: TCP
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 10m
              memory: 24Mi
      tolerations:
        - effect: NoSchedule
          operator: Exists
      nodeSelector:
        kubernetes.io/hostname: rpi-k3s-worker2
